fixing alignment issues

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -409,7 +409,7 @@ button {
 
 .content_main {
    position: relative;
-   margin-top: 400px;
+   margin-top: 300px;
 }
 
 .banner .carousel-indicators li {
